# privacy-option-simpol

./: LICENSE  README  privacy-option-simpol.cabal  start.hs
Data/SimPOL/: Observable.hs  PersonalData.hs  Purpose.hs  Time.hs
Language/: SimPOL.hs
Language/SimPOL/: Template.hs
Language/SimPOL/Template/: Disclose.hs  Obs.hs  Option.hs  Retention.hs
Semantics/SimPOL/: Management.hs
Text/: Dialog.hs  PrettyXHTML.hs
