name:                privacy-option-simpol
version:             0.1.0.0
synopsis:            A simple instance of a privacy contract language
description:         simPOL: a simple instance of a privacy contract language.
homepage:            https://github.com/ZjMNZHgG5jMXw/privacy-option-simpol
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@kau.se
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:
    Semantics.SimPOL.Management
    Text.PrettyXHTML
    Text.Dialog
    Language.SimPOL
    Language.SimPOL.Template
    Language.SimPOL.Template.Disclose
    Language.SimPOL.Template.Option
    Language.SimPOL.Template.Obs
    Language.SimPOL.Template.Retention
    Data.SimPOL.Time
    Data.SimPOL.Observable
    Data.SimPOL.PersonalData
    Data.SimPOL.Purpose
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base            >=4.6     && <4.7,
    transformers    >=0.3     && <0.4,
    xhtml           >=3000.2  && <3000.3,
    readline        >=1.0     && <1.1,
    privacy-option  >=0.1     && <0.2
  -- hs-source-dirs:      
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/ZjMNZHgG5jMXw/privacy-option-simpol.git

-- vim: ft=cabal:sts=2:sw=2:tw=80:et:nu:ai
